# c99inrust

./: .gitattributes  .gitignore  Cargo.toml  README.md  deny.toml
.github/: branch-ruleset.json  pull_request_template.md
.github/ISSUE_TEMPLATE/: compiler-gap.md
.github/workflows/: ci.yml
.omo/rules/: rust.md
.omo/ultragoal/: brief.md  goals.json  ledger.jsonl
docs/: architecture.md  branch-rules.md  doom.md  full-c99.md
docs/qa/: 2026-05-18-doom-translation-unit.md  2026-05-18-for-loop.md  2026-05-18-logical-short-circuit.md  2026-05-18-rust-slop-performance.md  2026-05-18-while-loop.md  2026-05-18-zero-arg-call.md  2026-05-19-doom-link.md  2026-05-20-doom-input-smoke.md  2026-05-20-doom-manual-play.md  2026-05-20-doom-movement-smoke.md  2026-05-21-doom-compile-scan.md  2026-05-21-doom-link-scan.md
plans/: c99-doom-baseline.md
src/: diagnostics.rs  lib.rs
src/codegen/: aarch64_addressing.rs  aarch64_analysis.rs  aarch64_assign.rs  aarch64_binary.rs  aarch64_call_preserve.rs  aarch64_calls.rs  aarch64_complex_abi.rs  frames.rs  (+51 more)
tests/: clang_oracle.rs  cli.rs  compiler.rs  doom_array_decay.rs  doom_byte_pointers.rs  doom_layout.rs  doom_local_arrays.rs  doom_pointer_alignment.rs  doom_pointer_returns.rs  doom_post_decrement.rs  doom_short_arrays.rs  doom_sizeof_expr.rs  doom_struct_initializers.rs  doom_unsigned_short_fields.rs  front_end.rs  parser_surface.rs
tools/: check-rust-no-excuses.sh  doom-compile-scan.sh  doom-input-smoke.sh  doom-link-scan.sh  doom-manual-play.sh  doom-movement-smoke.sh  doom-smoke.sh  doom-validate-manual-transcript.sh
(+296 files in other folders)
